[FIX] darkmode issue

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3><span>Hello There...!</span></h3>
-                    <p>I jasmin Bhesaniya. I completed my Bachelor Of Computer Applications from Sardar Patel University, Anand. I am from Vadodara, Gujarat. I’m interested in learning more about Web Development and Web Designing. I am always experimenting, always learning, and never bored.</p>
+                    <p>I jasmin Bhesaniya. I completed my Bachelor Of Computer Applications from Sardar Patel University, Anand. I am from Junagadh, Gujarat. I’m interested in learning more about Web Development and Web Designing. I am always experimenting, always learning, and never bored.</p>
                   </div>
                 </div>
                 <div class="row">
@@ -123,41 +123,29 @@
                     <div class="row">
                       <h1 class="padd-15">Skills</h1>
                       <div class="skill-item languages padd-15">
-                        <h4 class="skill-card">HTML5</h4>
-                        <!-- <div class="progress">
-                          <div class="progress-in" style="width: 100%"></div>
-                            <div class="skill-percent">
-                              100%
-                          </div>
-                        </div> -->
+                        <h4 class="skill-card timeline shadow-dark">HTML5</h4>
                       </div>
                       <div class="skill-item languages padd-15">
-                        <h4 class="skill-card">CSS3</h4>
-                        <!-- <div class="progress">
-                          <div class="progress-in" style="width: 100%"></div>
-                            <div class="skill-percent">
-                              100%
-                          </div>
-                        </div> -->
+                        <h4 class="skill-card timeline shadow-dark">CSS3</h4>
                       </div>
                       <div class="skill-item languages padd-15">
-                        <h4 class="skill-card">Bootstrap 4, Bootstrap 5</h4>
+                        <h4 class="skill-card timeline shadow-dark">Bootstrap 4, Bootstrap 5</h4>
                       </div>
                       <div class="skill-item languages padd-15">
-                        <h4 class="skill-card">SASS</h4>
+                        <h4 class="skill-card timeline shadow-dark">SASS</h4>
                       </div>
                     </div>
                   </div>
                   <div class="skills padd-15">
                     <div class="row mrg-t-50">
                       <div class="skill-item web-technologies padd-15">
-                        <h4 class="skill-card">JavaScript</h4>
+                        <h4 class="skill-card timeline shadow-dark">JavaScript</h4>
                       </div>
                       <div class="skill-item web-technologies padd-15">
-                        <h4 class="skill-card">React.js</h4>
+                        <h4 class="skill-card timeline shadow-dark">React.js</h4>
                       </div>
                       <div class="skill-item web-technologies padd-15">
-                        <h4 class="skill-card">Vue.js</h4>
+                        <h4 class="skill-card timeline shadow-dark">Vue.js</h4>
                       </div>
                     </div>
                   </div>
@@ -256,12 +244,6 @@
                   </div>
                   <div class="project-info">
                     <h4 class="project-title">ZenMusic-web</h4>
-                    <p class="project-description">This project fees payment student by collecting online fees. The fees payment would be highly customized. Student pay the fees anytime and anywhere. This will help authorized admin to insert, delete, update or view the various record related to students.
-
-                      <br>Front End: ASP.NET 2008
-
-                      <br>Back End: MS SQL Server
-                    </p>
                     <div class="buttons">
                       <a href="" class="btn">View Project</a>
                     </div>
@@ -275,10 +257,6 @@
                   </div>
                   <div class="project-info">
                     <h4 class="project-title">Portfolio Website</h4>
-                    <p class="project-description">Used HTML, CSS and JavaScript to build the project. It has different
-                      pages like Home page, About page and Contact page. It has light and dark mode options. Also, it has many
-                      theme colour options like red, green, blue, yellow and purple. It's Mobile and Tablet friendly also.
-                    </p>
                     <div class="buttons">
                       <a href="" class="btn">View Project</a>
                     </div>
