fix responsive issue solved in contact us page

--- a/index.html
+++ b/index.html
@@ -295,19 +295,18 @@
                     </div>
                     <!-- Contact Form -->
                     <div class="row padd-15">
-                      <div class="contact-text">
+                      <div class="contact-text ml-sm-0">
                         Let's get in touch
                       </div>
                     </div>
                     <div class="row padd-15">
                       <div class="buttons">
-                        <a href="mailto:jasminbhesaniya@gmail.com" class="btn contact-btn">Mail Me !!</a>
+                        <a href="mailto:jasminbhesaniya@gmail.com" class="btn contact-btn ml-sm-0">Mail Me !!</a>
                       </div>
                     </div>
                     <!-- Contact Form End-->
                   </div>
               </section>
-
               <!-- Contact Section End -->
             </div>
           </div>
