add sapreate folder css and js files

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <title>Jasmin Bhesaniya</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="blue.css" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/blue.css" type="text/css">
     <!-- Theme Switcher -->
-    <link rel="stylesheet" title="purple" class="alternate-style" href="purple.css" type="text/css" disabled>
-    <link rel="stylesheet" title="red" class="alternate-style" href="red.css" type="text/css" disabled>
-    <link rel="stylesheet" title="yellow" class="alternate-style" href="yellow.css" type="text/css" disabled>
-    <link rel="stylesheet" title="green" class="alternate-style" href="green.css" type="text/css" disabled>
-    <link rel="stylesheet" title="blue" class="alternate-style" href="blue.css" type="text/css" disabled>
+    <link rel="stylesheet" title="purple" class="alternate-style" href="./css/purple.css" type="text/css" disabled>
+    <link rel="stylesheet" title="red" class="alternate-style" href="./css/red.css" type="text/css" disabled>
+    <link rel="stylesheet" title="yellow" class="alternate-style" href="./css/yellow.css" type="text/css" disabled>
+    <link rel="stylesheet" title="green" class="alternate-style" href="./css/green.css" type="text/css" disabled>
+    <link rel="stylesheet" title="blue" class="alternate-style" href="./css/blue.css" type="text/css" disabled>
     <!-- Theme Switcher End -->
-    <link rel="stylesheet" href="themeSwitcher.css" type="text/css">
+    <link rel="stylesheet" href="./css/themeSwitcher.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -87,7 +87,7 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3><span>Hello There...!</span></h3>
-                    <p>I jasmin Bhesaniya. I completed my Bachelor Of Computer Applications from Sardar Patel University, Anand. I am from Junagadh, Gujarat. I’m interested in learning more about Web Development and Web Designing. I am always experimenting, always learning, and never bored.</p>
+                    <p>I jasmin Bhesaniya. I completed my Bachelor Of Computer Applications from Sardar Patel University, Anand. I am from Junagadh, Gujarat. I’m interested in learning more about Web Designing and Web Development. I am always experimenting, always learning, and never bored.</p>
                   </div>
                 </div>
                 <div class="row">
@@ -343,13 +343,10 @@
     </div>
     <!-- Theme Switcher End -->
     <!-- Template Js -->
-    <script src="script.js">
-
+    <script src="./js/script.js">
     </script>
       <!-- JavaScript for Theme Switcher -->
-      <script src="themeSwitcher.js">
-
-      </script>
+      <script src="./js/themeSwitcher.js"></script>
     <!-- JavaScript for Theme Switcher End -->
   
   </body>
