--- a/index.html
+++ b/index.html
@@ -263,6 +263,19 @@
                   </div>
                 </div>
               </div>
+              <div class="project-item padd-15">
+                <div class="project-item-inner shadow-dark">
+                  <div class="project-img">
+                    <img src="./images/react-crud-app.png" width="100%" alt="">
+                  </div>
+                  <div class="project-info">
+                    <h4 class="project-title">React-Crud-App</h4>
+                    <div class="buttons">
+                      <a href="" class="btn">View Project</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
